
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int UINT ;
struct TYPE_3__ {int Rpc; } ;
typedef int RPC_USE_SECURE ;
typedef TYPE_1__ REMOTE_CLIENT ;
typedef int PACK ;


 int ERR_INTERNAL_ERROR ;
 int FreePack (int *) ;
 int InRpcUseSecure (int *,int *) ;
 int * NewPack () ;
 int * RpcCall (int ,char*,int *) ;
 int RpcGetError (int *) ;
 int RpcIsOk (int *) ;

UINT CcGetUseSecure(REMOTE_CLIENT *r, RPC_USE_SECURE *sec)
{
 PACK *p, *ret;
 UINT err = 0;

 if (r == ((void*)0) || sec == ((void*)0))
 {
  return ERR_INTERNAL_ERROR;
 }

 p = NewPack();

 ret = RpcCall(r->Rpc, "GetUseSecure", p);

 if (RpcIsOk(ret) == 0)
 {
  err = RpcGetError(ret);
 }
 else
 {
  InRpcUseSecure(sec, ret);
 }

 FreePack(ret);

 return err;
}
